crates/laplace-macro/tests/ui/fail/verify_threads_zero.rs
// SPDX-License-Identifier: Apache-2.0

#[laplace_macro::laplace_verify(threads = 0)]
async fn threads_zero() {}

fn main() {}
